--- a/CODE/video56/index.html
+++ b/CODE/video56/index.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>If/Else-Statements</title>
 </head>
 <body>
   <script src="script.js"></script>
-  
 </body>
 </html>
