--- a/PRACTICE/practice3/prob2.html
+++ b/PRACTICE/practice3/prob2.html
@@ -6,9 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="script.js">
-    
-  </script>
-  
+  <script src="prob2.js"></script>
 </body>
 </html>
