--- a/PRACTICE-SET/practice-set-3/prob2.html
+++ b/PRACTICE-SET/practice-set-3/prob2.html
@@ -4,8 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="prob2.css">
 </head>
 <body>
   <script src="prob2.js"></script>
+  <div>
+    hello i am a paragraph
+  </div>
 </body>
 </html>
