--- a/CODE/video66/index.html
+++ b/CODE/video66/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JavaScript DOM</title>
 </head>
+
 <body>
-  <script>
-    document.title="New Title"
-  </script>
+  <script src="script.js"></script>
 </body>
+
 </html>
