--- a/CODE/video67/index.html
+++ b/CODE/video67/index.html
@@ -4,8 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    .box{
+      width: 55px;
+      height: 45px;
+      border: solid black 2px;
+      padding: 10px;
+      margin: 20px;
+    }
+  </style>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="box">box1</div>
+    <div class="box">box2</div>
+    <div class="box">box3</div>
+    <div class="box">box4</div>
+    <div class="box">box5</div>
+  </div>
+  <script src="style.js"></script>
 </body>
 </html>
